--- a/src/components/main/Main.scss
+++ b/src/components/main/Main.scss
@@ -150,6 +150,13 @@
   transition: none;
 }
 
+.scrollable-deck {
+  display: flex;
+  flex-direction: row;
+  max-width: 100vw;
+  overflow-x: scroll;
+}
+
 #MiddleColumn {
   border-left: 1px solid var(--color-borders);
 
