--- a/src/components/main/Main.scss
+++ b/src/components/main/Main.scss
@@ -158,7 +158,7 @@
 }
 
 #MiddleColumn {
-  border-left: 1px solid var(--color-borders);
+  border-right: 1px solid var(--color-borders);
 
   @media (max-width: 925px) {
     max-width: none;
@@ -204,4 +204,15 @@
       transition: none;
     }
   }
+}
+
+.add-column-wrapper{
+  width: 360px;
+  border-right: 1px solid var(--color-borders);
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+  padding: 20px;
+
 }
