--- a/src/components/middle/MiddleColumn.scss
+++ b/src/components/middle/MiddleColumn.scss
@@ -5,7 +5,8 @@
   position: relative;
   z-index: 1;
   // width: 320px;
-  width: 360px;
+  min-width: 360px;
+  max-width: 360px;
 
 
   @media (max-width: 600px) {
